--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/node_modules
+
 # ==================
 # Client
 # ==================
@@ -29,3 +31,4 @@
 # Server
 # ==================
 /server/node_modules
+/server/config
