--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "start": "node app.js",
     "dev": "env-cmd -f ./config/dev.env nodemon app.js",
-    "virtual-prod": "env-cmd -f ./config/virtual-production.env node app.js"
+    "virtual-prod": "env-cmd -f ./config/virtual-production.env node app.js",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2"
   }
 }
