--- a/server/package.json
+++ b/server/package.json
@@ -4,20 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon app.js",
-    "virtual-prod": "env-cmd -f ./config/virtual-production.env node app.js",
+    "start": "node index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon index.js",
+    "virtual-prod": "env-cmd -f ./config/virtual-production.env node index.js",
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
