--- a/client/package.json
+++ b/client/package.json
@@ -152,5 +152,5 @@
     "jest-enzyme": "^7.1.2",
     "moxios": "^0.4.0"
   },
-  "proxy": "http://localhost/8000"
+  "proxy": "http://localhost:8000"
 }
